<resources>
    <string name="app_name">SMTP</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="Sign_in">登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smtp">写邮件</string>
    <string name="pop3">收件箱</string>
    <string name="reciver">收件人</string>
    <string name="sender">发件人</string>
    <string name="theme">主题</string>
    <string name="document_content">文件内容</string>
    <string name="send">发送</string>
    <string name="Register">注册</string>
    <string name="check_password">确认密码</string>
    <string name="submit">提交</string>
</resources>
